--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -182,7 +182,42 @@
        <li data-col="2" data-row="1" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-two" class="example-container"></div></li>
        <li data-col="1" data-row="2" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-three" class="example-container"></div></li>
        <li data-col="2" data-row="2" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-four" class="example-container"></div></li>
+
        <li data-col="1" data-row="3" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-five" class="example-container"></div></li>
+       <li data-col="2" data-row="3" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-six" class="example-container"></div></li>
+       <li data-col="1" data-row="4" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-seven" class="example-container"></div></li>
+       <li data-col="1" data-row="4" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-eight" class="example-container"></div></li>
+
+       <li data-col="1" data-row="5" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-nine" class="example-container"></div></li>
+       <li data-col="1" data-row="5" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-ten" class="example-container"></div></li>
+       <li data-col="1" data-row="6" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-eleven" class="example-container"></div></li>
+       <li data-col="1" data-row="6" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-twelve" class="example-container"></div></li>
+
+       <li data-col="1" data-row="7" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-13th" class="example-container"></div></li>
+       <li data-col="1" data-row="7" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-14th" class="example-container"></div></li>
+       <li data-col="1" data-row="8" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-15th" class="example-container"></div></li>
+
+       <li data-col="1" data-row="8" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-16th" class="example-container"></div></li>
+       <li data-col="1" data-row="9" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-17th" class="example-container"></div></li>
+       <li data-col="1" data-row="9" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-18th" class="example-container"></div></li>
+
+       <li data-col="1" data-row="10" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-19th" class="example-container"></div></li>
+       <li data-col="2" data-row="10" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-20th" class="example-container"></div></li>
+       <li data-col="1" data-row="11" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-21st" class="example-container"></div></li>
+       <li data-col="1" data-row="11" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-22nd" class="example-container"></div></li>
+
+       <li data-col="1" data-row="12" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-23rd" class="example-container"></div></li>
+       <li data-col="1" data-row="12" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-24th" class="example-container"></div></li>
+       <li data-col="1" data-row="13" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-25th" class="example-container"></div></li>
+       <li data-col="1" data-row="13" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-26th" class="example-container"></div></li>
+
+       <li data-col="1" data-row="14" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-27th" class="example-container"></div></li>
+       <li data-col="1" data-row="14" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-28th" class="example-container"></div></li>
+       <li data-col="1" data-row="15" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-29th" class="example-container"></div></li>
+
+       <li data-col="1" data-row="15" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-30th" class="example-container"></div></li>
+       <li data-col="1" data-row="16" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-31st" class="example-container"></div></li>
+       <li data-col="1" data-row="16" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-32nd" class="example-container"></div></li>
      </ul>
    </div>
  </div>
@@ -223,7 +258,43 @@
             {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
             {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
             {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
-            {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST15DAY"}
+                    //E1 last 7 day
+            {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                    //PPM last 7 day
+            {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                    //RFT last 7 day
+            {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                    //EEO last 7 day
+            {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                    //E1 last 4 week
+                    {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"E1",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"E1",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    //PPM last 4 week
+                    {kpi:"PPM_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"PPM_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"PPM_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"PPM_L",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    //RFT last 4 week
+                    {kpi:"RFT_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"RFT_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"RFT_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    //EEO last 4 week
+                    {kpi:"OEE_L",departmentArray:['BU-MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"OEE_L",departmentArray:['BU-GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    {kpi:"OEE_L",departmentArray:['BU-VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+
         ], i,
                 $targets=$("#dashBoard-show-full").find(".example-container");
 //        var KPIArray=[ "E1","PPM_L","RFT_L","OEE_L"],
