--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -77,8 +77,8 @@
                   {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
                   {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
                   {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
-                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
-                  {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST15DAY"}
+                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null}
+
               ], i,
               $targets=$("#dashBoard-show-full").find(".example-container");
 
