--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -24,11 +24,40 @@
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="6" class="gs-w" style="display: list-item;"><div id="example-six" class="example-container"></div></li>
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="7" class="gs-w" style="display: list-item;"><div id="example-seven" class="example-container"></div></li>
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="8" class="gs-w" style="display: list-item;"><div id="example-eight" class="example-container"></div></li>
-      <!--Monthly-->
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="9"  class="gs-w" style="display: list-item;"><div id="example-nine" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="10" class="gs-w" style="display: list-item;"><div id="example-ten" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="11" class="gs-w" style="display: list-item;"><div id="example-eleven" class="example-container"></div></li>
-      <li data-sizex="4" data-sizey="1" data-col="1" data-row="12" class="gs-w" style="display: list-item;"><div id="example-twelve" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="9"  class="gs-w" style="display: list-item;"><div id="example-9th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="10" class="gs-w" style="display: list-item;"><div id="example-10th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="11" class="gs-w" style="display: list-item;"><div id="example-11th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="12" class="gs-w" style="display: list-item;"><div id="example-12th" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="13"  class="gs-w" style="display: list-item;"><div id="example-13th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="14" class="gs-w" style="display: list-item;"><div id="example-14th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="15" class="gs-w" style="display: list-item;"><div id="example-15th" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="16"  class="gs-w" style="display: list-item;"><div id="example-16th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="17" class="gs-w" style="display: list-item;"><div id="example-17th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="18" class="gs-w" style="display: list-item;"><div id="example-18th" class="example-container"></div></li>
+
+      <!---->
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="19"  class="gs-w" style="display: list-item;"><div id="example-19th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="20" class="gs-w" style="display: list-item;"><div id="example-20th" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="21" class="gs-w" style="display: list-item;"><div id="example-21" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="22" class="gs-w" style="display: list-item;"><div id="example-22" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="23"  class="gs-w" style="display: list-item;"><div id="example-23" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="24" class="gs-w" style="display: list-item;"><div id="example-24" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="25" class="gs-w" style="display: list-item;"><div id="example-25" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="26" class="gs-w" style="display: list-item;"><div id="example-26" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="27"  class="gs-w" style="display: list-item;"><div id="example-27" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="28" class="gs-w" style="display: list-item;"><div id="example-28" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="29" class="gs-w" style="display: list-item;"><div id="example-29" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="30"  class="gs-w" style="display: list-item;"><div id="example-30" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="31" class="gs-w" style="display: list-item;"><div id="example-31" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="32" class="gs-w" style="display: list-item;"><div id="example-32" class="example-container"></div></li>
+
     </ul>
   </div>
 </div>
@@ -77,7 +106,44 @@
                   {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
                   {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
                   {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
-                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null}
+                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
+                  //E1 last 7 day
+                  {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  //PPM last 7 day
+                  {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  //RFT last 7 day
+                  {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  //EEO last 7 day
+                  {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  //E1 last 4 week
+                  {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"E1",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"E1",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  //PPM last 4 week
+                  {kpi:"PPM_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"PPM_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"PPM_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"PPM_L",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  //RFT last 4 week
+                  {kpi:"RFT_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"RFT_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"RFT_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  //EEO last 4 week
+                  {kpi:"OEE_L",departmentArray:['BU-MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"OEE_L",departmentArray:['BU-GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi:"OEE_L",departmentArray:['BU-VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+
 
               ], i,
               $targets=$("#dashBoard-show-full").find(".example-container");
