--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -58,6 +58,17 @@
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="31" class="gs-w" style="display: list-item;"><div id="example-31" class="example-container"></div></li>
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="32" class="gs-w" style="display: list-item;"><div id="example-32" class="example-container"></div></li>
 
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="33"  class="gs-w" style="display: list-item;"><div id="example-33" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="34" class="gs-w" style="display: list-item;"><div id="example-34" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="35" class="gs-w" style="display: list-item;"><div id="example-35" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="36"  class="gs-w" style="display: list-item;"><div id="example-36" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="37" class="gs-w" style="display: list-item;"><div id="example-37" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="38" class="gs-w" style="display: list-item;"><div id="example-38" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="39"  class="gs-w" style="display: list-item;"><div id="example-39" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="40" class="gs-w" style="display: list-item;"><div id="example-40" class="example-container"></div></li>
     </ul>
   </div>
 </div>
@@ -107,24 +118,18 @@
                   {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
                   {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
                   {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
-                  //E1 last 7 day
-                  {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  //PPM last 7 day
-                  {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  //RFT last 7 day
-                  {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  //EEO last 7 day
-                  {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+
+                      //WEEK
+                  {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
+                  {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
+                  {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:200,everyDay:false,time_range:null},
+                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:200,everyDay:false,time_range:null},
+                      //MONTH
+                  {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
+                  {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
+                  {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:300,everyDay:false,time_range:null},
+                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:300,everyDay:false,time_range:null},
+
                   //E1 last 4 week
                   {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                   {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
@@ -143,6 +148,25 @@
                   {kpi:"OEE_L",departmentArray:['BU-MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                   {kpi:"OEE_L",departmentArray:['BU-GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                   {kpi:"OEE_L",departmentArray:['BU-VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  //E1 last 7 day
+                  {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  //PPM last 7 day
+                  {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  //RFT last 7 day
+                  {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  //EEO last 7 day
+                  {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+
 
 
               ], i,
