--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -218,6 +218,17 @@
        <li data-col="1" data-row="15" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-30th" class="example-container"></div></li>
        <li data-col="1" data-row="16" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-31st" class="example-container"></div></li>
        <li data-col="1" data-row="16" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-32nd" class="example-container"></div></li>
+
+       <li data-col="1" data-row="17" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-33" class="example-container"></div></li>
+       <li data-col="1" data-row="17" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-34" class="example-container"></div></li>
+       <li data-col="1" data-row="18" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-35" class="example-container"></div></li>
+
+       <li data-col="1" data-row="18" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-36" class="example-container"></div></li>
+       <li data-col="1" data-row="19" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-37" class="example-container"></div></li>
+       <li data-col="1" data-row="19" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-38" class="example-container"></div></li>
+
+       <li data-col="1" data-row="20" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-39" class="example-container"></div></li>
+       <li data-col="1" data-row="20" data-sizex="2" data-sizey="1" class="gs-w" style="display: list-item;"><div id="example-40" class="example-container"></div></li>
      </ul>
    </div>
  </div>
@@ -258,24 +269,17 @@
             {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
             {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
             {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
-                    //E1 last 7 day
-            {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                    //PPM last 7 day
-            {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                    //RFT last 7 day
-            {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                    //EEO last 7 day
-            {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                    //WEEK
+                    {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
+                    {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
+                    {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:200,everyDay:false,time_range:null},
+                    {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:200,everyDay:false,time_range:null},
+                    //MONTH
+                    {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
+                    {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
+                    {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:300,everyDay:false,time_range:null},
+                    {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:300,everyDay:false,time_range:null},
+
                     //E1 last 4 week
                     {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                     {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
@@ -294,6 +298,25 @@
                     {kpi:"OEE_L",departmentArray:['BU-MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                     {kpi:"OEE_L",departmentArray:['BU-GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                     {kpi:"OEE_L",departmentArray:['BU-VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                    //E1 last 7 day
+            {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                    //PPM last 7 day
+            {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                    //RFT last 7 day
+            {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                    //EEO last 7 day
+            {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+            {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+
 
         ], i,
                 $targets=$("#dashBoard-show-full").find(".example-container");
@@ -374,24 +397,6 @@
                         {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
                         {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
                         {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
-                        //E1 last 7 day
-                        {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        //PPM last 7 day
-                        {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        //RFT last 7 day
-                        {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        //EEO last 7 day
-                        {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                        {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
                         //E1 last 4 week
                         {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                         {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
@@ -410,6 +415,25 @@
                         {kpi:"OEE_L",departmentArray:['BU-MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                         {kpi:"OEE_L",departmentArray:['BU-GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                         {kpi:"OEE_L",departmentArray:['BU-VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                        //E1 last 7 day
+                        {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        //PPM last 7 day
+                        {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        //RFT last 7 day
+                        {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        //EEO last 7 day
+                        {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                        {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+
 
                     ], i,
                     $targets=$("#dashBoard-show-full").find(".example-container");
