--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -69,6 +69,15 @@
 
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="39"  class="gs-w" style="display: list-item;"><div id="example-39" class="example-container"></div></li>
       <li data-sizex="4" data-sizey="1" data-col="1" data-row="40" class="gs-w" style="display: list-item;"><div id="example-40" class="example-container"></div></li>
+
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="41" class="gs-w" style="display: list-item;"><div id="example-41" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="42" class="gs-w" style="display: list-item;"><div id="example-42" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="43" class="gs-w" style="display: list-item;"><div id="example-43" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="44" class="gs-w" style="display: list-item;"><div id="example-44" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="45" class="gs-w" style="display: list-item;"><div id="example-45" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="46" class="gs-w" style="display: list-item;"><div id="example-46" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="47" class="gs-w" style="display: list-item;"><div id="example-47" class="example-container"></div></li>
+      <li data-sizex="4" data-sizey="1" data-col="1" data-row="48" class="gs-w" style="display: list-item;"><div id="example-48" class="example-container"></div></li>
     </ul>
   </div>
 </div>
@@ -114,61 +123,65 @@
   //can use destroy
   $(document).ready(function (){
       var args=[
-                  {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
-                  {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
-                  {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
-                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
-
-                      //WEEK
-                  {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
-                  {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
-                  {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:200,everyDay:false,time_range:null},
-                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:200,everyDay:false,time_range:null},
-                      //MONTH
-                  {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
-                  {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
-                  {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:300,everyDay:false,time_range:null},
-                  {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:300,everyDay:false,time_range:null},
+                  {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 100, everyDay: false, time_range: null},
+                  {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 100, everyDay: false, time_range: null},
+                  {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 100, everyDay: false, time_range: null},
+                  {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 100, everyDay: false, time_range: null},
+                  //WEEK
+                  {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 200, everyDay: false, time_range: null},
+                  {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 200, everyDay: false, time_range: null},
+                  {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 200, everyDay: false, time_range: null},
+                  {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 200, everyDay: false, time_range: null},
+                  //MONTH
+                  {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 300, everyDay: false, time_range: null},
+                  {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 300, everyDay: false, time_range: null},
+                  {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 300, everyDay: false, time_range: null},
+                  {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 300, everyDay: false, time_range: null},
 
                   //E1 last 4 week
-                  {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"E1",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"E1",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi: "E1", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "E1", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "E1", departmentArray: ['VW'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "E1", departmentArray: ['Cutting'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "E1", departmentArray: ["CAPSA"], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                   //PPM last 4 week
-                  {kpi:"PPM_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"PPM_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"PPM_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"PPM_L",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi: "PPM_L", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "PPM_L", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "PPM_L", departmentArray: ['VW'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "PPM_L", departmentArray: ['Cutting'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "PPM_L", departmentArray: ['CAPSA'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                   //RFT last 4 week
-                  {kpi:"RFT_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"RFT_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"RFT_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi: "RFT_L", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "RFT_L", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "RFT_L", departmentArray: ['VW'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "RFT_L", departmentArray: ['CAPSA'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                   //EEO last 4 week
-                  {kpi:"OEE_L",departmentArray:['BU-MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"OEE_L",departmentArray:['BU-GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                  {kpi:"OEE_L",departmentArray:['BU-VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                  {kpi: "OEE_L", departmentArray: ['BU-MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "OEE_L", departmentArray: ['BU-GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "OEE_L", departmentArray: ['BU-VW'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                  {kpi: "OEE_L", departmentArray: ['BU-CAPSA'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                   //E1 last 7 day
-                  {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi: "E1", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "E1", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "E1", departmentArray: ['VW'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "E1", departmentArray: ['Cutting'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "E1", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                   //PPM last 7 day
-                  {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi: "PPM_L", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "PPM_L", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "PPM_L", departmentArray: ['VW'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "PPM_L", departmentArray: ['Cutting'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "PPM_L", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                   //RFT last 7 day
-                  {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                  {kpi: "RFT_L", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "RFT_L", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "RFT_L", departmentArray: ['VW'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "RFT_L", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                   //EEO last 7 day
-                  {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                  {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-
-
-
+                  {kpi: "OEE_L", departmentArray: ['BU-MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "OEE_L", departmentArray: ['BU-GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "OEE_L", departmentArray: ['BU-VW'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                  {kpi: "OEE_L", departmentArray: ['BU-CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
               ], i,
               $targets=$("#dashBoard-show-full").find(".example-container");
 
